# hiaac-template

./: README.md  cookiecutter.json
{{ cookiecutter.project_slug }}/: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
{{ cookiecutter.project_slug }}/docs/src/: index.md  process.md  train_model.md
{{ cookiecutter.project_slug }}/docs/src/data/: index.md  make_dataset.md
{{ cookiecutter.project_slug }}/docs/src/features/: build_features.md  index.md
{{ cookiecutter.project_slug }}/docs/src/models/: index.md  predict_model.md  train_model.md
{{ cookiecutter.project_slug }}/docs/src/visualization/: index.md  visualize.md
{{ cookiecutter.project_slug }}/src/: process.py
{{ cookiecutter.project_slug }}/src/features/: build_features.py
{{ cookiecutter.project_slug }}/tests/: __init__.py
